# slua-playground

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy.yml
public/wasm/: luau.js  luau.wasm
src/: App.svelte  app.css
src/embed/: EmbedOutput.svelte  EmbedPlayground.svelte  EmbedTabs.svelte  EmbedToolbar.svelte  editor.ts  index.ts  share.ts  styles.css  wasm.ts
src/lib/components/: BytecodeView.svelte  ConfigPopover.svelte  Editor.svelte  Output.svelte  TabBar.svelte
src/lib/components/ui/button/: Button.svelte  index.ts
src/lib/editor/: Luau.tmLanguage.json  index.ts  lspExtensions.ts  setup.ts  textmate.ts  themes.ts
src/lib/luau/: types.ts  wasm.ts
src/lib/stores/: playground.ts  settings.ts
src/lib/utils/: output.ts  share.ts  theme.ts
wasm/: CMakeLists.txt  README.md  build.sh
wasm/src/: playground.cpp
